reintroduce the two column spacing fix
Auditors: lauren

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -942,24 +942,27 @@
         }
     }
 
-    #sat-route-task, #sat-route-section {
+    #sat-route-task {
         // Only want the direct child of content-area because there are many
         // perseus-renderer divs.
         .content-area > .perseus-renderer {
             margin-top: @satTopSpacingForOneColumnLayout;
+        }
+    }
 
-            &.perseus-renderer-two-columns {
-                // Override column top margin to 0 (the first column will get
-                // the desired spacing by adding padding - to preserve the
-                // gray background)
-                margin-top: 0;
+    #sat-route-task, #sat-route-section {
+        .content-area > .perseus-renderer-two-columns {
+            // Override column top margin to 0 (the first column will get
+            // the desired spacing by adding padding - to preserve the
+            // gray background)
+            margin-top: 0;
 
-                // Add spacing to the second column, by way of its first child.
-                // We want the margins to auto collapse, and so we can't add
-                // it to perseus-column because it's floated.
-                .perseus-column:nth-child(2) > *:first-child {
-                    margin-top: @satTopSpacingForTwoColumnLayout;
-                }
+            // Add spacing to the second column, by way of its first child.
+            // We want the margins to auto collapse, and so we can't add
+            // it to perseus-column because it's floated.
+            .perseus-column:nth-child(2) > *:first-child {
+                display: block;
+                margin-top: @satTopSpacingForTwoColumnLayout;
             }
         }
     }
